:bug: revert sticky footer CSS, it breaks the pages in other sections

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -162,13 +162,6 @@ ul {
   padding: 0;
 }
 
-// Sticky footer
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
 .ad-container {
   flex: 1;
 }
